tests/spec/emit/snapshots/equality_struct_ref_field_compares_by_identity.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Node { value: int, next: Ref<Node> }
---
package main

type Node struct {
	value int
	next  *Node
}

func (n Node) equals(other Node) bool {
	return n.value == other.value && n.next == other.next
}
