tests/spec/emit/snapshots/equality_struct_synthesizes_equals.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Order { id: int, tags: Slice<string> }
---
package main

import "slices"

type Order struct {
	id   int
	tags []string
}

func (o Order) equals(other Order) bool {
	return o.id == other.id && slices.Equal(o.tags, other.tags)
}
