tests/spec/emit/snapshots/equality_synthesized_keeps_nested_slice_user_equals_live.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Inner { x: int }
  
  impl Inner {
    fn equals(self, other: Inner) -> bool {
      self.x == other.x
    }
  }
  
  #[equality]
  struct Outer { items: Slice<Inner> }
---
package main

import "slices"

type Inner struct {
	x int
}

func (i Inner) equals(other Inner) bool {
	return i.x == other.x
}

type Outer struct {
	items []Inner
}

func (o Outer) equals(other Outer) bool {
	return slices.EqualFunc(o.items, other.items, func(a, b Inner) bool { return a.equals(b) })
}
