tests/spec/emit/snapshots/equality_user_equals_over_function_field.snap
---
source: tests/spec/emit/types.rs
description: "\n#[equality]\nstruct Handler { run: fn(int) -> int }\n\nimpl Handler {\n  fn equals(self, other: Handler) -> bool {\n    true\n  }\n}\n"
---
package main

type Handler struct {
	run func(int) int
}

func (h Handler) equals(_ Handler) bool {
	return true
}
