tests/spec/emit/snapshots/equality_user_equals_suppresses_synthesis.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[equality]
  struct Caseless { value: string }
  
  impl Caseless {
    fn equals(self, other: Caseless) -> bool {
      self.value == other.value
    }
  }
---
package main

type Caseless struct {
	value string
}

func (c Caseless) equals(other Caseless) bool {
	return c.value == other.value
}
