tests/spec/emit/snapshots/equality_weaker_interface_method_bound_is_usable.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Parent {
    fn p(self)
  }
  
  interface Child {
    embed Parent
  
    fn c(self)
  }
  
  #[equality]
  struct Box<T: Child> { value: T }
  
  impl<T: Parent> Box<T> {
    fn equals(self, other: Box<T>) -> bool {
      true
    }
  }
---
package main

type Parent interface {
	p()
}

type Child interface {
	Parent
	c()
}

type Box[T interface {
	Child
	Parent
}] struct {
	value T
}

func (b Box[T]) equals(_ Box[T]) bool {
	return true
}
